--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,38 +1,20 @@
 quarkus.openshift.expose=true
 
-
-mp.messaging.outgoing.generated-heart-name.bootstrap.servers=172.30.21.49:9092
-mp.messaging.outgoing.generated-heart-name.connector=smallrye-kafka
-mp.messaging.outgoing.generated-heart-name.topic=heartrate
-mp.messaging.outgoing.generated-heart-name.value.serializer=org.apache.kafka.common.serialization.StringSerializer
-
-
-mp.messaging.outgoing.generated-blood-name.bootstrap.servers=172.30.21.49:9092
-mp.messaging.outgoing.generated-blood-name.connector=smallrye-kafka
-mp.messaging.outgoing.generated-blood-name.topic=bloodpressure
-mp.messaging.outgoing.generated-blood-name.value.serializer=org.apache.kafka.common.serialization.StringSerializer
-
-
-mp.messaging.outgoing.generated-blood-oxygen-name.bootstrap.servers=172.30.21.49:9092
-mp.messaging.outgoing.generated-blood-oxygen-name.connector=smallrye-kafka
-mp.messaging.outgoing.generated-blood-oxygen-name.topic=bloodoxygen
-mp.messaging.outgoing.generated-blood-oxygen-name.value.serializer=org.apache.kafka.common.serialization.StringSerializer
-
-
 quarkus.kubernetes-client.trust-certs=true
-
+mp.messaging.incoming.heartratealert.bootstrap.servers=172.30.21.49:9092
+mp.messaging.incoming.heartratealert.connector=smallrye-kafka
+mp.messaging.incoming.heartratealert.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.heartratealert.value.deserializer=org.apache.kafka.common.serialization.IntegerDeserializer
 
 # Configure the Kafka source (we read from it)
-mp.messaging.incoming.heartrate.bootstrap.servers=172.30.21.49:9092
-mp.messaging.incoming.heartrate.connector=smallrye-kafka
-mp.messaging.incoming.heartrate.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+quarkus.kafka-streams.bootstrap-servers=172.30.21.49:9092
+quarkus.kafka-streams.application-server=${hostname}:8080
+quarkus.kafka-streams.topics=heartrate
+kafka-streams.application.id=devices-app
+quarkus.kafka-streams.application.id=devices-app
+application.id=devices-app
 
-mp.messaging.incoming.bloodpressure.bootstrap.servers=172.30.21.49:9092
-mp.messaging.incoming.bloodpressure.connector=smallrye-kafka
-mp.messaging.incoming.bloodpressure.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
-
-
-
-mp.messaging.incoming.bloodoxygen.bootstrap.servers=172.30.21.49:9092
-mp.messaging.incoming.bloodoxygen.connector=smallrye-kafka
-mp.messaging.incoming.bloodoxygen.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+# pass-through options
+kafka-streams.commit.interval.ms=1000
+kafka-streams.metadata.max.age.ms=500
+kafka-streams.metrics.recording.level=DEBUG
